# AutoCar

./: .gitignore
Linux/src/: CMakeLists.txt
Linux/src/base/: CMakeLists.txt  base.cpp  base.h  cmake_install.cmake
Linux/src/client/: client.cpp
Linux/src/config/: config.h  data.h
Linux/src/control/: CMakeLists.txt  control.cpp  control.h  controller.cpp  controller.h  lightcontroller.cpp  lightcontroller.h  mobilecontroller.cpp  mobilecontroller.h
Linux/src/led/: CMakeLists.txt  cmake_install.cmake  led.cpp  led.h
Linux/src/motor/: CMakeLists.txt  fan.cpp  fan.h  motor.cpp  motor.h
Linux/src/net/: CMakeLists.txt  server.cpp  server.h
Linux/src/sensor/: CMakeLists.txt  bcmtemp.cpp  bcmtemp.h  brightness.cpp  brightness.h  mypcf8591.cpp  mypcf8591.h  temperature.cpp  (+3 more)
MCU/serial/: protocol.h
UP_CONTROL/up2/: up2.pro
linux/: CMakeLists.txt  Makefile.bak  client  client.cpp  server  server.cpp
linux/src/: CMakeLists.txt  main.cpp
linux/src/base/: base.cpp  base.h
linux/src/config/: CMakeLists.txt  config.h  data.h
linux/src/led/: CMakeLists.txt  LED  led.cpp  led.h
linux/src/motor/: cmake_install.cmake  motor.cpp  motor.h
linux/src/net/: server.cpp
linux/src/sensor/: brightness.cpp  brightness.h  mypcf8591.cpp  mypcf8591.h  temperature.cpp  temperature.h  ultrasonic.cpp  ultrasonic.h
mcu/: SmartCar.ino
up/Control/: Control.pro  def.h  main.cpp  mainwindow.cpp
up/build-Control-5_7_static-Release/: Makefile  Makefile.Debug  Makefile.Release
up/build-Control-Desktop_Qt_5_7_0_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
(+25 files in other folders)
